--- a/.github/workflows/pypitest.yml
+++ b/.github/workflows/pypitest.yml
@@ -31,9 +31,9 @@ jobs:
         pip install build twine
     - name: Build package
       run: python -m build
-    - name: Publish package to Test PyPI
-      uses: pypa/gh-action-pypi-publish@v1
-      with:
-        user: __token__
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/
+    - name: Upload to Test PyPI
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
+      run: |
+        twine upload --repository-url https://test.pypi.org/legacy/ dist/*
