--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 
 [project]
 name = "weily-FileTransfer"
-version = "0.3.1"
+version = "0.3.2"
 authors = [
   { name="weilycoder", email="weily2009@outlook.com" }
 ]
@@ -11,7 +11,7 @@ description = "Local Area Network (LAN) file transfer utility."
 readme = "README.md"
 license = { file = "LICENSE.txt" }
 requires-python = ">=3.6"
-dependencies = []
+dependencies = ["tomlkit"]
 
 [project.urls]
 Homepage = "https://github.com/weilycoder/FileTransfer/"
