--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 
 [project]
 name = "weily-FileTransfer"
-version = "0.3.3-beta2"
+version = "0.3.3"
 authors = [
   { name="weilycoder", email="weily2009@outlook.com" }
 ]
